# GenAI-3D-Virtual-Reality-Augmented

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  generate_environment.py  pyproject.toml  setup.md  tutorial.md
3D/: README.md
NPC/: README.md
genai_3d_vr_ar/: __init__.py  app.py  config.py  generate_environment.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_generate_environment.py
